<resources>
    <string name="app_name">SpaceWeatherApp</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Information</string>
    <string name="menu_slideshow">Contact Us</string>
    <string name="menu_news">News</string>
    <string name="menu_about">About This App</string>
</resources>